# pybass3

./: .gitignore  CHANGES.md  LICENSE.txt  README.md  manifest.in  setup.cfg  setup.py  upload.bat
examples/: console_player.py  curses_playlist.py  directory_player.py  pys2_playlist.py  pyside2_player_with_playlist.py  pyside2_player_with_playlist_table.py  pyside2_simple_song_player.py  qt_simple_song_player.py  tag_reader.py  walk_tags.py
pybass3/: __init__.py  bass_channel.py  bass_module.py  bass_stream.py  bass_tags.py  playlist.py  qt_simple_song_player.py  song.py
src/pybass3/: LICENSE  __init__.py  bass_channel.py  bass_module.py  bass_stream.py  bass_tags.py  playlist.py  pys2_playlist.py  pys2_song.py  qt_simple_song_player.py  qtd.py  song.py
src/pybass3/codes/: channel.py  errors.py
src/pybass3/structs/: id.py
