[metadata]
name = PyBASS3
version = attr: pybass3.__version__
url = https://github.com/devdave/pybass3
author = DevDave (David Ward)
author_email = devdave@ominian.net
description = A managed ctypes wrapper around the BASS audio library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
        Programming Language :: Python :: 3
        Operating System :: Microsoft :: Windows
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        License :: Free for non-commercial use
        Natural Language :: English
        Topic :: Multimedia :: Sound/Audio

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

